Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • CMake CMake
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 4,100
    • Issues 4,100
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 15
    • Merge requests 15
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • External wiki
    • External wiki
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • CMakeCMake
  • CMakeCMake
  • Issues
  • #21400
Closed
Open
Issue created Nov 05, 2020 by Maarten@MaartenBentContributor

cmake-gui crashes when browsing for file

When browsing for a file/directory in cmake-gui the application crashes.

Using Browse Source... or Browse Build... works fine, but when using the … button in the list control (entries with a PATH or FILEPATH type), the Windows file browser opens and then the application crashes.

Versions that crash are 3.19.0-rc1, 3.19.0-rc2 and cmake-3.19.20201104-g227cc60-win64-x64.zip. Window 10 64 bit. CMake 3.18 works fine.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking